Changed CSS to show header on phone. I've tested on iOS and looks correct, having issues with android. Anyone welcome to test on android.

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,9 @@
 /* Your app's CSS, go crazy, make it your own */
 
+body{
+    margin-top: 15pt;
+}
+
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
